# contexo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
benchmarks/: locomo_eval.py  longmemeval_eval.py
examples/: anthropic_integration.py  basic_usage.py  cli_chat.py  custom_backend.py  custom_embeddings.py  generic_llm_wrapper.py  graphdb_usage.py  langchain_integration.py  multi_agent_example.py  openai_chat_client.py  provenance_tracing.py  sectioned_memory.py
scripts/: check.sh
src/contexo/: __init__.py  contexo.py
src/contexo/config/: __init__.py  defaults.py  settings.py
src/contexo/core/: __init__.py  context.py  exceptions.py  memory.py
src/contexo/embeddings/: __init__.py  base.py  mock.py  openai.py  sentence_transformers.py
src/contexo/integrations/: __init__.py  langchain_memory.py
src/contexo/persistent_memory/: __init__.py  persistent_memory.py  provenance.py
src/contexo/storage/: __init__.py  base.py  graphdb.py  in_memory.py  sqlite.py
src/contexo/tracing/: __init__.py  decorator.py  tracing.py
src/contexo/utils/: __init__.py  serialization.py  tokenization.py
src/contexo/working_memory/: __init__.py  working_memory.py
src/contexo/working_memory/strategies/: __init__.py  base.py  importance.py  sliding_window.py  summarization.py
tests/: conftest.py  test_core.py  test_graphdb.py
