[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contexo"
version = "0.1.0"
description = "A generic Python library for LLM Context Management with two-tier memory hierarchy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Contexo Contributors" }
]
keywords = ["llm", "context", "memory", "ai", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "sentence-transformers>=2.2",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
cohere = ["cohere>=5.0"]
sentence-transformers = ["sentence-transformers>=2.2"]
sqlite = ["aiosqlite>=0.19"]
postgresql = ["asyncpg>=0.29"]
redis = ["redis>=5.0"]
neo4j = ["neo4j>=5.0"]
opentelemetry = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
all = [
    "contexo[openai,cohere,sentence-transformers,sqlite,postgresql,redis,neo4j,opentelemetry]",
]
dev = [
    "contexo[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/contexo"
Documentation = "https://github.com/yourusername/contexo#readme"
Repository = "https://github.com/yourusername/contexo"
"Bug Tracker" = "https://github.com/yourusername/contexo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/contexo"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=contexo --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
